force-app/main/default/objects/Opportunity/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>Client Reference</label>
    <type>Text</type>
    <length>120</length>
</CustomField>