force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason__c</fullName>
    <label>Close Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Product Feature</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>