force-app/main/default/objects/Opportunity/fields/Low__c.field-meta.xml
<CustomField>
    <fullName>Low__c</fullName>
    <label>Low)</label>
    <type>Text</type>
    <length>120</length>
</CustomField>