force-app/main/default/objects/Opportunity/fields/Loyality_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Loyality_Picklist__c</fullName>
    <label>Loyality (Picklist</label>
    <type>Text</type>
    <length>120</length>
</CustomField>