force-app/main/default/objects/Opportunity/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <length>120</length>
    <type>Text</type>
</CustomField>