force-app/main/default/objects/Opportunity/fields/Person_Closed_Deal_With_c__c.field-meta.xml
<CustomField>
    <fullName>Person_Closed_Deal_With_c__c</fullName>
    <label>Person_Closed_Deal_With__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>