force-app/main/default/objects/Opportunity/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>18%</fullName>
            </value>
            <value>
                <fullName>28%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>