force-app/main/default/objects/Opportunity/fields/Unit_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_List_Price__c</fullName>
    <label>Unit List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>