force-app/main/default/objects/Opportunity/fields/Unit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sales_Price__c</fullName>
    <label>Unit Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>