force-app/main/default/objects/Opportunity/fields/Validity_Period_in_months__c.field-meta.xml
<CustomField>
    <fullName>Validity_Period_in_months__c</fullName>
    <label>Validity Period (in months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>