force-app/main/default/objects/Opportunity/fields/Was_negotiation_done__c.field-meta.xml
<CustomField>
    <fullName>Was_negotiation_done__c</fullName>
    <label>Was negotiation done?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>