force-app/main/default/objects/Opportunity/fields/Was_Negotiation_Done_c__c.field-meta.xml
<CustomField>
    <fullName>Was_Negotiation_Done_c__c</fullName>
    <label>Was_Negotiation_Done__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>