force-app/main/default/objects/Opportunity/fields/What_went_Right__c.field-meta.xml
<CustomField>
    <fullName>What_went_Right__c</fullName>
    <label>What went Right</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>