force-app/main/default/objects/Opportunity/fields/What_went_Wrong__c.field-meta.xml
<CustomField>
    <fullName>What_went_Wrong__c</fullName>
    <label>What went Wrong?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>