force-app/main/default/objects/Opportunity/recordTypes/BRD_Opportunity_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>BRD_Opportunity_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Custom Opportunity Process</businessProcess>
    <label>BRD Opportunity Record Type</label>
</RecordType>