force-app/main/default/objects/Opportunity/recordTypes/Custom_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Custom_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Custom Opportunity Process</businessProcess>
    <label>Custom Opportunity</label>
</RecordType>